[package]
name = "cortev"
version = "0.1.0"
edition = "2021"
authors = ["Dany Gagnon <admin@ovior.ca>"]
description = "Web framework built on top of axum"
license = "MIT"
repository = "https://github.com/cortev/framework"
readme = "README.md"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
