[package]
name = "cortev"
version = "0.1.0"
edition = "2021"
authors = ["Dany Gagnon <admin@ovior.ca>"]
description = "Web framework built on top of axum"
license = "MIT"
repository = "https://github.com/cortev/framework"
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
axum-core = "0.4.5"
dashmap = { version = "6.1.0", optional = true }
futures = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"

[features]
default = ["memory"]
memory = ["dashmap"]
