[package]
name = "cortev-http"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
axum-core = "0.4.5"
futures = "0.3.31"
http = "1.2.0"
ipnet = "2.10.1"
pin-project-lite = "0.2.15"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"

[lints]
workspace = true
