[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
cookie = { version = "0.18.1", features = ["private", "key-expansion"] }
cortev = { path = "../../cortev", features = ["session-memory"] }
tokio = { version = "1.41.1", features = ["full"] }

[lints]
workspace = true
