[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
cookie = { version = "0.18.1", features = ["private", "key-expansion"] }
cortev = { path = "../../cortev", features = ["session-memory"] }
deadpool-redis = "0.18.0"
tokio = { version = "1.41.1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }

[lints]
workspace = true
